--- a/appointment.json
+++ b/appointment.json
@@ -1,112 +1,112 @@
 {
     "data": [
         {
- "AppointmentId": “ID_1234",
-“PatientId” : “PID_0011”,
-“PatientName” : “John Doe”,
-“DoctorId” : “DID_1231",
-“DoctorName” : “Steven Mark”,
-“AppointmentDate” : "11/09/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : "Virtual”,
-“CaseManagerId” : "”,
-        },
+  "AppointmentId": "ID_1234",
+  "PatientId": "PID_0011",
+  "PatientName": "John Doe",
+  "DoctorId": "DID_1231",
+  "DoctorName": "Steven Mark",
+  "AppointmentDate": "11/09/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "Virtual",
+  "CaseManagerId": ""
+},
        {
- "AppointmentId": “ID_1111",
-“PatientId” : “PID_0012”,
-“PatientName” : “Avtar”,
-“DoctorId” : “DID_1231",
-“DoctorName” : “Steven Mark”,
-“AppointmentDate” : "11/10/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : "Virtual”,
-“CaseManagerId” : "”,
-        },
+  "AppointmentId": "ID_1111",
+  "PatientId": "PID_0012",
+  "PatientName": "Avtar",
+  "DoctorId": "DID_1231",
+  "DoctorName": "Steven Mark",
+  "AppointmentDate": "11/10/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "Virtual",
+  "CaseManagerId": ""
+},
        {
- "AppointmentId": “ID_1020",
-“PatientId” : “PID_0013”,
-“PatientName” : “Rajesh singh”,
-“DoctorId” : “DID_1231",
-“DoctorName” : “Steven Mark”,
-“AppointmentDate” : "11/11/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : "Virtual”,
-“CaseManagerId” : "”,
-        },
+  "AppointmentId": "ID_1020",
+  "PatientId": "PID_0013",
+  "PatientName": "Rajesh singh",
+  "DoctorId": "DID_1231",
+  "DoctorName": "Steven Mark",
+  "AppointmentDate": "11/11/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "Virtual",
+  "CaseManagerId": ""
+},
        {
- "AppointmentId": “ID_1004",
-“PatientId” : “PID_0014”,
-“PatientName” : “narender modi”,
-“DoctorId” : “DID_7766",
-“DoctorName” : “Amit Shah”,
-“AppointmentDate” : "11/12/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : "Virtual”,
-“CaseManagerId” : "”,
-        },
+  "AppointmentId": "ID_1004",
+  "PatientId": "PID_0014",
+  "PatientName": "Narender modi",
+  "DoctorId": "DID_7766",
+  "DoctorName": "Amit Shah",
+  "AppointmentDate": "11/12/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "Virtual",
+  "CaseManagerId": ""
+},
         {
-"AppointmentId": “ID_1211",
-“PatientId” : “PID_221",
-“PatientName” : "Sunny Deol",
-“DoctorId” : "DID_7766",
-“DoctorName” : “Amit Shah”,
-“AppointmentDate” : "11/13/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : “In Person“
-“CaseManagerId” : “CID_3300”,
-        },
+  "AppointmentId": "ID_1211",
+  "PatientId": "PID_221",
+  "PatientName": "Sunny Deol",
+  "DoctorId": "DID_7766",
+  "DoctorName": "Amit Shah",
+  "AppointmentDate": "11/13/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "Virtual",
+  "CaseManagerId": "CID_3300"
+},
        {
-"AppointmentId": “ID_1555",
-“PatientId” : “PID_222",
-“PatientName” : "Amrish Puri",
-“DoctorId” : "DID_7766",
-“DoctorName” : “Amit Shah”,
-“AppointmentDate” : "11/14/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : “In Person“
-“CaseManagerId” : “CID_3340”,
-        },
+  "AppointmentId": "ID_1555",
+  "PatientId": "PID_222",
+  "PatientName": "Amrish Puri",
+  "DoctorId": "DID_7766",
+  "DoctorName": "Amit Shah",
+  "AppointmentDate": "11/14/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "In Person",
+  "CaseManagerId": "CID_3300"
+},
        {
-"AppointmentId": “ID_1666",
-“PatientId” : “PID_223",
-“PatientName” : "Manish Balne",
-“DoctorId” : "DID_7700",
-“DoctorName” : “Jhony Liver”,
-“AppointmentDate” : "11/14/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : “In Person“
-“CaseManagerId” : “CID_3340”,
-        },
+  "AppointmentId": "ID_1666",
+  "PatientId": "PID_223",
+  "PatientName": "Manish Balne",
+  "DoctorId": "DID_7700",
+  "DoctorName": "Jhony Liver",
+  "AppointmentDate": "11/14/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "In Person",
+  "CaseManagerId": "CID_3340"
+},
        {
-"AppointmentId": “ID_1989",
-“PatientId” : “PID_224",
-“PatientName” : "Indu mati",
-“DoctorId” : "DID_7700",
-“DoctorName” : “Jhony Liver”,
-“AppointmentDate” : "11/11/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : “In Person“
-“CaseManagerId” : “CID_3345”,
-        },
+  "AppointmentId": "ID_1989",
+  "PatientId": "PID_224",
+  "PatientName": "Indu mati",
+  "DoctorId": "DID_7700",
+  "DoctorName": "Jhony Liver",
+  "AppointmentDate": "11/11/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "In Person",
+  "CaseManagerId": "CID_3345"
+},
        {
-"AppointmentId": “ID_1001",
-“PatientId” : “PID_225",
-“PatientName” : "Sylvie Saini",
-“DoctorId” : "DID_7700",
-“DoctorName” : “Jhony Liver”,
-“AppointmentDate” : "11/12/2022",
-“AppointmentDuration” : "30 minutes”,
-“AppointmentStatus” : "Confirmed",
-“AppointmentType” : “In Person“
-“CaseManagerId” : “CID_3345”,
-        }
+  "AppointmentId": "ID_1001",
+  "PatientId": "PID_225",
+  "PatientName": "Sylvie Saini",
+  "DoctorId": "DID_7700",
+  "DoctorName": "Jhony Liver",
+  "AppointmentDate": "11/12/2022",
+  "AppointmentDuration": "30 minutes",
+  "AppointmentStatus": "Confirmed",
+  "AppointmentType": "In Person",
+  "CaseManagerId": "CID_3345"
+}
     ]
 }
