--- a/appointment.json
+++ b/appointment.json
@@ -27,7 +27,7 @@
        {
   "AppointmentId": "ID_1020",
   "PatientId": "PID_0013",
-  "PatientName": "Rajesh singh",
+  "PatientName": "Rodger",
   "DoctorId": "DID_1231",
   "DoctorName": "Steven Mark",
   "AppointmentDate": "11/11/2022",
@@ -39,9 +39,9 @@
        {
   "AppointmentId": "ID_1004",
   "PatientId": "PID_0014",
-  "PatientName": "Narender modi",
+  "PatientName": "Alex",
   "DoctorId": "DID_7766",
-  "DoctorName": "Amit Shah",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -51,9 +51,9 @@
         {
   "AppointmentId": "ID_1211",
   "PatientId": "PID_221",
-  "PatientName": "Sunny Deol",
+  "PatientName": "Parker",
   "DoctorId": "DID_7766",
-  "DoctorName": "Amit Shah",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/13/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -63,9 +63,9 @@
        {
   "AppointmentId": "ID_1555",
   "PatientId": "PID_222",
-  "PatientName": "Amrish Puri",
+  "PatientName": "Costis",
   "DoctorId": "DID_7766",
-  "DoctorName": "Amit Shah",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -75,9 +75,9 @@
        {
   "AppointmentId": "ID_1666",
   "PatientId": "PID_223",
-  "PatientName": "Manish Balne",
+  "PatientName": "Ivan",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Liver",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -87,9 +87,9 @@
        {
   "AppointmentId": "ID_1989",
   "PatientId": "PID_224",
-  "PatientName": "Indu mati",
+  "PatientName": "Namish",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Liver",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/11/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -99,9 +99,9 @@
        {
   "AppointmentId": "ID_1001",
   "PatientId": "PID_225",
-  "PatientName": "Sylvie Saini",
+  "PatientName": "Peter",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Liver",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
