--- a/appointment.json
+++ b/appointment.json
@@ -3,9 +3,11 @@
         {
   "AppointmentId": "ID_1234",
   "PatientId": "PID_0011",
-  "PatientName": "John Doe",
+  "PatientFirstName": "John",
+  "PatientLastName": "Doe",
   "DoctorId": "DID_1231",
-  "DoctorName": "Steven Mark",
+  "DoctorFirstName": "Steven",
+  "DoctorLastName": "Mark",
   "AppointmentDate": "11/09/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -15,9 +17,11 @@
        {
   "AppointmentId": "ID_1111",
   "PatientId": "PID_0012",
-  "PatientName": "Avtar",
+  "PatientFirstName": "Avtar",
+  "PatientLastName": "Doe",
   "DoctorId": "DID_1231",
-  "DoctorName": "Steven Mark",
+  "DoctorFirstName": "Steven",
+  "DoctorLastName": "Mark",
   "AppointmentDate": "11/10/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -27,9 +31,11 @@
        {
   "AppointmentId": "ID_1020",
   "PatientId": "PID_0013",
-  "PatientName": "Rodger",
+  "PatientFirstName": "Rodger",
+  "PatientLastName": "Louis",
   "DoctorId": "DID_1231",
-  "DoctorName": "Steven Mark",
+  "DoctorFirstName": "Steven",
+  "DoctorLastName": "Mark",
   "AppointmentDate": "11/11/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -39,9 +45,11 @@
        {
   "AppointmentId": "ID_1004",
   "PatientId": "PID_0014",
-  "PatientName": "Alex",
+  "PatientFirstName": "Alex",
+  "PatientFirstName": "Mark",
   "DoctorId": "DID_7766",
-  "DoctorName": "Danny Tran",
+  "DoctorFirstName": "Danny",
+  "DoctorLastName": "Tran",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -51,9 +59,11 @@
         {
   "AppointmentId": "ID_1211",
   "PatientId": "PID_221",
-  "PatientName": "Parker",
+  "PatientFirstName": "Parker",
+  "PatientLastName": "Stark",
   "DoctorId": "DID_7766",
-  "DoctorName": "Danny Tran",
+  "DoctorFirstName": "Danny",
+  "DoctorLastName": "Tran",
   "AppointmentDate": "11/13/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -63,9 +73,11 @@
        {
   "AppointmentId": "ID_1555",
   "PatientId": "PID_222",
-  "PatientName": "Costis",
+  "PatientFirstName": "Costis",
+  "PatientLastName": "Dim",
   "DoctorId": "DID_7766",
-  "DoctorName": "Danny Tran",
+  "DoctorFirstName": "Danny",
+  "DoctorLastName": "Tran",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -75,9 +87,11 @@
        {
   "AppointmentId": "ID_1666",
   "PatientId": "PID_223",
-  "PatientName": "Ivan",
+  "PatientFirstName": "Ivan",
+  "PatientLastName": "Sharma",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Kin",
+  "DoctorFirstName": "Jhony",
+  "DoctorLastName": "Kin",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -87,9 +101,11 @@
        {
   "AppointmentId": "ID_1989",
   "PatientId": "PID_224",
-  "PatientName": "Namish",
+  "PatientFirstName": "Namish",
+  "PatientLastName": "Tim",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Kin",
+  "DoctorFirstName": "Jhony",
+  "DoctorLastName": "Kin",
   "AppointmentDate": "11/11/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -99,9 +115,11 @@
        {
   "AppointmentId": "ID_1001",
   "PatientId": "PID_225",
-  "PatientName": "Peter",
+  "PatientFirstName": "Peter",
+  "PatientLastName": "Parker",
   "DoctorId": "DID_7700",
-  "DoctorName": "Jhony Kin",
+  "DoctorFirstName": "Jhony",
+  "DoctorLastName": "Kin",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
