--- a/appointment.json
+++ b/appointment.json
@@ -3,11 +3,9 @@
         {
   "AppointmentId": "ID_1234",
   "PatientId": "PID_0011",
-  "PatientFirstName": "John",
-  "PatientLastName": "Doe",
+  "PatientName": "John Doe",
   "DoctorId": "DID_1231",
-  "DoctorFirstName": "Steven",
-  "DoctorLastName": "Mark",
+  "DoctorName": "Steven Mark",
   "AppointmentDate": "11/09/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -17,11 +15,9 @@
        {
   "AppointmentId": "ID_1111",
   "PatientId": "PID_0012",
-  "PatientFirstName": "Avtar",
-  "PatientLastName": "Doe",
+  "PatientName": "Avtar Doe",
   "DoctorId": "DID_1231",
-  "DoctorFirstName": "Steven",
-  "DoctorLastName": "Mark",
+  "DoctorName": "Steven Mark",
   "AppointmentDate": "11/10/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -31,11 +27,9 @@
        {
   "AppointmentId": "ID_1020",
   "PatientId": "PID_0013",
-  "PatientFirstName": "Rodger",
-  "PatientLastName": "Louis",
+  "PatientName": "Rodger Louis",
   "DoctorId": "DID_1231",
-  "DoctorFirstName": "Steven",
-  "DoctorLastName": "Mark",
+  "DoctorName": "Steven Mark",
   "AppointmentDate": "11/11/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -45,11 +39,9 @@
        {
   "AppointmentId": "ID_1004",
   "PatientId": "PID_0014",
-  "PatientFirstName": "Alex",
-  "PatientFirstName": "Mark",
+  "PatientName": "Alex Mark",
   "DoctorId": "DID_7766",
-  "DoctorFirstName": "Danny",
-  "DoctorLastName": "Tran",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -59,11 +51,9 @@
         {
   "AppointmentId": "ID_1211",
   "PatientId": "PID_221",
-  "PatientFirstName": "Parker",
-  "PatientLastName": "Stark",
+  "PatientName": "Parker Stark",
   "DoctorId": "DID_7766",
-  "DoctorFirstName": "Danny",
-  "DoctorLastName": "Tran",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/13/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -73,11 +63,9 @@
        {
   "AppointmentId": "ID_1555",
   "PatientId": "PID_222",
-  "PatientFirstName": "Costis",
-  "PatientLastName": "Dim",
+  "PatientName": "Costis Dim",
   "DoctorId": "DID_7766",
-  "DoctorFirstName": "Danny",
-  "DoctorLastName": "Tran",
+  "DoctorName": "Danny Tran",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -87,11 +75,9 @@
        {
   "AppointmentId": "ID_1666",
   "PatientId": "PID_223",
-  "PatientFirstName": "Ivan",
-  "PatientLastName": "Sharma",
+  "PatientName": "Ivan Sharma",
   "DoctorId": "DID_7700",
-  "DoctorFirstName": "Jhony",
-  "DoctorLastName": "Kin",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/14/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -101,11 +87,9 @@
        {
   "AppointmentId": "ID_1989",
   "PatientId": "PID_224",
-  "PatientFirstName": "Namish",
-  "PatientLastName": "Tim",
+  "PatientName": "Namish Tim",
   "DoctorId": "DID_7700",
-  "DoctorFirstName": "Jhony",
-  "DoctorLastName": "Kin",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/11/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
@@ -115,11 +99,9 @@
        {
   "AppointmentId": "ID_1001",
   "PatientId": "PID_225",
-  "PatientFirstName": "Peter",
-  "PatientLastName": "Parker",
+  "PatientName": "Peter Parker",
   "DoctorId": "DID_7700",
-  "DoctorFirstName": "Jhony",
-  "DoctorLastName": "Kin",
+  "DoctorName": "Jhony Kin",
   "AppointmentDate": "11/12/2022",
   "AppointmentDuration": "30 minutes",
   "AppointmentStatus": "Confirmed",
